# lit-extraction

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: cli.py
src/consolidation/: __init__.py  gemini.py
src/io/: __init__.py  ocr_lighton.py  pdf_attachment.py
src/litreview/: __main__.py  cli.py  config.py
src/litreview/consolidation/: __init__.py  gemini.py
src/litreview/io/: __init__.py  metadata.py
src/litreview/persistence/: __init__.py  filesystem.py
src/litreview/pipeline/: __init__.py  stages.py
src/litreview/prompts/: __init__.py  consolidation_prompt.py  extraction_prompt.py  qa_prompt.py
src/litreview/providers/: __init__.py
src/litreview/schemas/: __init__.py  common.py  extraction.py
src/persistence/: __init__.py
src/pipeline/: __init__.py  stages.py
src/prompts/: __init__.py
src/providers/: __init__.py  openrouter.py
src/schemas/: __init__.py  extraction.py  qa.py
tests/: test_cli_run.py  test_smoke.py
tests/integration/: test_pipeline_e2e_mocked.py
tests/io/: test_metadata_loader.py  test_ocr_lighton.py  test_pdf_attachment.py
tests/persistence/: test_filesystem_persistence.py
tests/pipeline/: test_stages.py
tests/prompts/: test_prompt_builders.py
tests/providers/: test_openrouter_client.py
tests/schemas/: test_extraction_schema.py  test_qa_schema.py
