[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "litreview"
version = "0.1.0"
description = "Multi-LLM literature review extraction pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "matplotlib>=3.10.8",
  "pillow>=10.4.0,<12.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pypdf>=4.2.0,<6.0.0",
  "pypdfium2>=4.30.0,<5.0.0",
  "python-dotenv>=1.2.2",
  "torch>=2.4.0,<3.0.0",
  "torchvision>=0.19.0,<1.0.0",
  "transformers>=5.0.0,<6.0.0",
  "typer>=0.12.5,<1.0.0",
]

[project.scripts]
litreview = "litreview.cli:app"

[dependency-groups]
dev = [
  "pytest>=9.0.0,<10.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
